# lerobot

./: .gitignore  README.md  find_cameras.py  list_cameras.py  list_cameras_pygrabber.py  simple_camera_test.py  test_camera.py  use_camera.py
lerobot/lerobot/common/cameras/: utils.py
so100-mujoco-sim/: .gitignore  README.md  pyproject.toml
so100-mujoco-sim/scripts/: download.py
so100-mujoco-sim/src/: .gitignore
so100-mujoco-sim/src/configs/: main_follower.json  so100.py
so100-mujoco-sim/src/so100_mujoco_sim/: arm_control.py  mujoco_viewport.py  simulate.py  update_thread.py
so100-mujoco-sim/src/so100_mujoco_sim/xml/: .gitignore  README.txt  sim_scene.xml
so100-mujoco-sim/tests/: test_arm_control.py
