[project]
authors = [{name = "Lachlan Hurst", email = "lachlan.hurst@gmail.com"}]
name = "so100-mujoco-sim"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
so100_mujoco_sim = { path = ".", editable = true }
mujoco = ">=3.2.7,<4"
PySide6 = ">=6.8.2,<6.9"
QtAwesome = ">=1.4.0,<1.5"
urdf2mjcf = ">=0.2.17"
draccus = ">=0.10.0,<0.11"
feetech-servo-sdk = ">=1.0.0"
pytest = ">=8.3.5,<9"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]

[tool.pixi.tasks]
download = { cmd = "python scripts/download.py" }
simulate = { cmd = "python src/so100_mujoco_sim/simulate.py" }
qta-browser = { cmd = "qta-browser" }
test = { cmd = "python -m pytest" }

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
pyyaml = ">=6.0.2,<7"
pytorch = ">=2.6.0,<3"
typing-extensions = ">=4.13.0,<5"
tqdm = ">=4.67.1,<5"
